<resources>
    <string name="header" translatable="false">Netology. University of Internet Professions</string>
    <string name="date" translatable="false">May 21 at 18:36</string>
    <string name="app_name" translatable="false">Nmedia</string>
    <string name="postText" translatable="false">Hello, this is the new Netology! Once upon a time, Netology began with online marketing intensives. Then there were courses on design, development, analytics and management. We grow ourselves and help students grow: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone has the power that makes you want more, aim higher, run faster. Our mission is to help you get on the path to growth and start the chain of change --</string>
    <string name="amountLike" translatable="false" />
    <string name="amountRepost" translatable="false"/>
    <string name="amountViews" translatable="false"/>
    <string name="remove" translatable="false">Remove</string>
    <string name="empty_text_error" translatable="false">Text is empty</string>
    <string name="edit" translatable="false">Edit</string>
</resources>