<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/post_avatar_foreground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/post_avatar" />

    <TextView
        android:id="@+id/textHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/header"
        app:layout_constraintEnd_toStartOf="@id/buttonMenu"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.32" />


    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textHeader"
        app:layout_constraintVertical_bias="0.222"
        app:barrierDirection="bottom"/>

    <ImageButton
        android:id="@+id/buttonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:src="@drawable/menu"
        app:layout_constraintBottom_toBottomOf="@+id/textHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textHeader"
        app:layout_constraintTop_toTopOf="@+id/textHeader"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/postText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/postText"
        app:layout_constraintTop_toBottomOf="@+id/textDate"
        tools:layout_editor_absoluteX="110dp"
        app:barrierDirection="bottom"/>

    <ImageButton
        android:id="@+id/buttonLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postText"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/buttonRepost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/repost"
        app:layout_constraintStart_toEndOf="@+id/amountLike"
        app:layout_constraintTop_toBottomOf="@+id/postText"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:src="@drawable/views"
        android:layout_marginStart="200dp"
        app:layout_constraintStart_toEndOf="@+id/amountRepost"
        app:layout_constraintTop_toBottomOf="@+id/postText" />

    <TextView
        android:id="@+id/amountLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountLike"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLike"
        app:layout_constraintStart_toEndOf="@+id/buttonLike"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toTopOf="@+id/buttonLike" />

    <TextView
        android:id="@+id/amountRepost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountRepost"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLike"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/buttonRepost"
        app:layout_constraintTop_toTopOf="@+id/buttonLike" />

    <TextView
        android:id="@+id/amountRepost3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountViews"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonLike"
        app:layout_constraintStart_toEndOf="@+id/imageViews"
        app:layout_constraintTop_toTopOf="@+id/buttonLike" />


</androidx.constraintlayout.widget.ConstraintLayout>